--- a/code/templates/home.html
+++ b/code/templates/home.html
@@ -8,13 +8,7 @@
 <form action="/name_search">
     <input type="submit" value="Search by name">
 </form>
-<!--
 <br>
-<form action="/contury">
-    <input type="submit" value="Search by contury">
+<form action="/team_search">
+    <input type="submit" value="Search by team">
 </form>
-<br>
-<form action="/year">
-    <input type="submit" value="Search by year">
-</form>
--->
