--- a/code/templates/home.html
+++ b/code/templates/home.html
@@ -12,3 +12,9 @@
 <form action="/team_search">
     <input type="submit" value="Search by team">
 </form>
+<br>
+<br>
+<br>
+<form action="/insert">
+	<input type="submit" value="Insert New Data">
+</form>
