--- a/code/templates/team_search.html
+++ b/code/templates/team_search.html
@@ -17,7 +17,7 @@
 				<option value="{{row[0]}}">{{row[0]}}</option>
 			{% endfor %}
 		</select>
-		<input type="submit" name = "search">
+		<button type='submit'>search</button>
 	</form>
 	<br>
 	<br>
