--- a/code/templates/home.html
+++ b/code/templates/home.html
@@ -13,6 +13,10 @@
     <input type="submit" value="Search by team">
 </form>
 <br>
+<form action="/insert">
+	<input type="submit" value="Insert New Data">
+</form>
+<br>
 <form action="/score_search">
     <input type="submit" value="score">
 </form>
